# volview-insight

./: .env  .gitignore  README.md  custom-app.config.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  index.html  nginx.conf  package.json
core-volview-patches/: MACOS_COMPATIBILITY.patch  VOLVIEW_BACKEND.patch
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  Dockerfile.dev
docker/orthanc/: orthanc.json
docker/orthanc-proxy/: Dockerfile
notebooks/: 02-load-pt-matched-data-into-volview-insight.ipynb  Load-pt-matched-data-into-volview-insight-volumes.ipynb
scripts/: auto-import-data.sh  import-dicom-to-orthanc.py  import-fhir-to-hapi.py  setup-volumes.sh  start-dev.sh  start-prod.sh  start.sh  stop.sh
volview-insight/: MONAI_REASONING_INTEGRATION.md  vite.config.ts
volview-insight/fhir-login/: index.html  launch.html
volview-insight/orthanc-proxy/: package-lock.json  package.json  vite.config.js
volview-insight/server/: .gitignore  debug_utils.py  gpu_optimization.py  performance_middleware.py  pyproject.toml  test_monai_integration.py  volview_insight_clara_nv_reason_cxr_3b_inference.py  volview_insight_medgemma_inference.py  volview_insight_methods.py  volview_insight_monai_reasoning_inference.py  volview_insight_mrcxr1_inference.py  volview_insight_mrcxr1_simplified.py  volview_insight_nvidia_cxr_inference.py  volview_insight_seg_inference.py
volview-insight/server/volview_server/: __main__.py  rpc_server.py
volview-insight/src/: config.ts
volview-insight/src/components/: AboutBox.vue  App.vue  (+11 more)
(+17 files in other folders)
